# ptrX

./: .gitignore  PtrX.sln  README.md
.github/workflows/: cmake-multi-platform.yml
PtrX/: CMakeLists.txt  PtrX.vcxproj  PtrX.vcxproj.filters  ptrX.cpp  ptrX.h  ptrX_impl.h  test.cpp
PtrX/x64/Debug/: PtrX.exe.recipe  PtrX.ilk  vc143.idb
PtrX/x64/Debug/PtrX.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PtrX.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
